		* Fix for NonCurrentSources
		* Fix incorrect cookie parsing for amuleweb
		* Fix passing strings in EC
		* Lock webserver when serving images
		* EC implementation in C# (work in progress)
		* Fix preferences in amuleweb
		* Fix EC crashing webserver when new item added
		* GUI implementation in C# (work in progress)
		* Implementing split() call
		* Compilation fix for MuleGifDecoder
		
	LittleAbacus:
		* Patch to show part file numbers.
		* set the search string to the search text of currently
		  selected tab.

	nvinay:
		* Trivial issue with memset found using google codesearch which may
		  affect only the debugging.

	Phoenix:
		* Fix for crash in amulegui/DownloadListCtrl.cpp.
		* Upgraded extern/listctrl.{cpp,h} from wxWidgets cvs code.
		* Fixed some gtk2 warnings in extern/listctrl.cpp.
		* Fix for unhandled exception in new skinned toolbar code.
		* Coding style fixes.
		* Fix for server disconnection during global search.
		* No more wxARRAY's in amuleweb.
		* Fixed bug in mutex code in amuleweb (s_mutex_wcThreads).
		* No more wxARRAY's in aMule code.
		* Fixed bug in ECPacket.cpp: assignment inside assertion.
		* Changed CECSocket constructor to be exception safe.
		* Fix for invalid rectangle size on COScopeCtrl::PlotHistory().
		* Removed the default constructor for Kademlia contacts.
		* Fix for "get bwlimits" command in amulecmd always returning
		  zero for maximum download value.
		* Added UPnP support.
		* Fix for crash in ECSocket.cpp.
		* FileDetailDialog:: now has more intuitive Apply, Ok, Cancel
		  interface.
		* GUI to enter a specific bind IP in
		  "Preferences->Connection->BindAddress".
		* Resurrected support for the tag FT_DL_ACTIVE_TIME in the met
		  file. It's value, the download active time, can now be seen
		  in the file details dialog.
		* Added the DLACTIVETIME variable to the list of replaced
		  variables in the DowloadCompleted user event.
		* MuleTrayIcon.cpp was not compiling for __WXMAC_CARBON__.